--- a/index.html
+++ b/index.html
@@ -1,36 +1,91 @@
+<!DOCTYPE html>
 <html>
-<head>
-	<script type="text/javascript" src="jquery.js"></script>
-	<script type="text/javascript" src="data.js"></script>
-	<script type="text/javascript">
+<head>	
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    
+    <link rel="stylesheet" src="style.css">
 
-// 		function get() {
-// 			$.post('data.js', {name: form.name.value}, 
-// 				function(output) { //taking the output and passing it to the div main
-// 					$('#main').html(output).show(); //the output is from the data.php
-// 				});
-// 		}
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-	</script>
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-	<title>Child Soldiers Initiative: Country Reports</title>
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+	<title>Country Reports</title>
 </head>
+
 <body>
+	<div class="container" id="main">
+		<h2>  Country Reports </h2>
+		
+			<div id="accordion" role="tablist" aria-multiselectable="true">
+				<div class="card">
+					<div class="card-header" role="tab" id="headingOne">
+						<h5 class="mb-0">
+							<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+								GET Request					
+							</a>
+						</h5>
+					</div>
 
-<p>
-<!-- <form name="form">
-	<input type="text" name="name"><input type="button" value="Get" onClick="get();">
-</form> -->
+					<div id="collapseOne" class"collapse show" role='tabpanel' aria-labelledby="headingOne">
+						<div class="card-block">
+							<button id="getbutton"> GET </button>
 
-	<div id="main">
-		<span id="id"></span>
-		<br>
-	
-		<span id="title"></span>
-		<br>
+							<div id="report-content"></div>
 
-		<span id="date"></span>
+						</div>
+					</div>
+				</div>
+			
+
+				<!-- POST REQUEST  -->
+				<div class="card">
+					<div class="card-header" role="tab" id="headingTwo">
+						<h5 class="mb-0">
+							<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+								POST Request
+							</a>
+						</h5>
+					</div>
+
+					<div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
+						<div class="card-block">
+							<h4>Create a new country report</h4>
+  							<input type="text" name="title" placeholder="Title"><br><br>
+							<textarea name="content"  placeholder="Content"></textarea><br><br>
+  							<button class="btn" id="quick-add-button">Create Report</button>
+						</div>
+					</div>
+				</div>
+			
+
+
+			</div>
+
+
+
+
+
 	</div>
 
+	<!-- <button class="btn btn-primary" id="hide-form">Create a Report </button>
+	<div style="visibility:hidden;" class="container" id="report-form">
+  		<h3>Post a New Country Report</h3>
+  		<input type="text" name="title" placeholder="Title"><br><br>
+		<textarea name="content"  placeholder="Content"></textarea><br><br>
+  		<button class="btn" id="quick-add-button">Create Report</button>
+  	</div> -->
 </body>
+
+
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/data.js"></script>
+
 </html>
