redirect link to a random page for testing

--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
 		<div id="wrapper" class="toggled">
 			<div id="sidebar-wrapper">
 				<ul class="sidebar-nav"  id="sideNav">
+					<a href="
+							http://dev-countryreportapp.pantheonsite.io/oauth/authorize?response_type=code&
+							client_id=7pxS2cteisV4hSzUYlAFoVzfbcst5z&
+							redirect_uri=http://dev-countryreportapp.pantheonsite.io/
+							&state=bminfwef
+							">
+								 <div>
+										 log in
+								 </div>
+						</a>
 					<li class="sidebar-brand">
 
 							<a href="">Country Reports</a>
-							<a href="
-									http://dev-countryreportapp.pantheonsite.io/oauth/authorize?response_type=code&
-									client_id=7pxS2cteisV4hSzUYlAFoVzfbcst5z&
-									redirect_uri=
-									&state=bminfwef
-									">
-										 <div>
-												 button
-										 </div>
-								</a>
 
 					</li>
 				</ul>
