added files redirect

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 					<a href="
 							http://dev-countryreportapp.pantheonsite.io/oauth/authorize?response_type=code&
 							client_id=7pxS2cteisV4hSzUYlAFoVzfbcst5z&
-							redirect_uri=http://dev-countryreportapp.pantheonsite.io/
-							&state=bminfwef
+							redirect_uri=http://web.cs.dal.ca/~kanawati/Child-Soldiers-Initiative-Country-Reports/redirect.html
 							">
 								 <div>
 										 log in
