--- a/index.html
+++ b/index.html
@@ -33,23 +33,32 @@
 		<div id="wrapper" class="toggled">
 			<div id="sidebar-wrapper">
 				<ul class="sidebar-nav"  id="sideNav">
-					<a href="
-							http://dev-countryreportapp.pantheonsite.io/oauth/authorize?response_type=code&
-							client_id=7pxS2cteisV4hSzUYlAFoVzfbcst5z&
-							redirect_uri=http://web.cs.dal.ca/~kanawati/Child-Soldiers-Initiative-Country-Reports/redirect.html
-							">
-								 <div>
-										 log in
-								 </div>
-						</a>
+					
 					<li class="sidebar-brand">
 
 							<a href="">Country Reports</a>
 
 					</li>
+					<a href="
+							http://dev-countryreportapp.pantheonsite.io/oauth/authorize?response_type=code&
+							client_id=7pxS2cteisV4hSzUYlAFoVzfbcst5z&
+							redirect_uri=http://web.cs.dal.ca/~kanawati/Child-Soldiers-Initiative-Country-Reports/redirect.html
+							">
+								 <li>
+										 log in
+								 </li>
+						</a>
+						<a href="
+
+							">
+								 <li>
+										 Create a New Report
+								 </li>
+						</a>
 				</ul>
 			</div>
 		</div>
+		<h1 align="center">Romeo Dallaire Child Soldier Initiative</h1>
 <!-- The nav bar should be here, the Titles are being shown inside this div tag class "containter" once the page is loaded -->
 
 
