--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
 				</ul>
 			</div>
 		</div>
-		<h1 align="center">Romeo Dallaire Child Soldier Initiative</h1>
 
 <!-- The nav bar should be here, the Titles are being shown inside this div tag class "containter" once the page is loaded -->
 
@@ -114,6 +113,8 @@
 				</div> -->
 			</div>
 		</div>
+		<h1 class= "pagetitle" align="center">Roméo Dallaire Child Soldiers Initiative</h1>
+		<h2 class="pagetitle" align="center">Country Reports</h2>
 	</div>
 </body>
 
