Adjusting title html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
 		</div>
 		<!-- POST REQUEST  -->
 		<div id="mainEdit">
-			<t id="tvTitle">Title: </t> <textarea id="title"></textarea>
+			<t id="tvTitle" style="font-size: 20px;">Title: </t> </br><textarea id="title"></textarea>
+			</br>
+			</br>
 			<textarea id="content"></textarea>
 			<button onClick="createPost()" id="button">Submit</button>
 			<div id='result' style='display:none'>Event Created</div>
